# Test-task

./: .gitignore  README.md  main.py  pyproject.toml  test_file.py
src/conf/: config.py
src/entity/: models.py
src/repository/: benchmark_repository.py
src/routes/: benchmarking_result.py
src/schemas/: benchmarking_result.py
src/services/: results_service.py
